--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,16 @@
-gunicorn==20.1.0
 beautifulsoup4==4.11.1
 bs4==0.0.1
 Flask==2.2.2
-requests==2.28.1
+Django==2.1.7
+dj-database-url==0.5.0
+dj-static==0.0.6
+gunicorn==19.9.0
+Unipath==1.1
+python-decouple==3.1
+Pillow==3.3.0
+Markdown==3.0.1
+bleach==3.1.0
+psycopg2==2.7.7
+whitenoise==4.1.2
+requests==2.28.0
+requests-oauthlib==1.0.0
