--- a/requirements.txt
+++ b/requirements.txt
@@ -1,16 +1,33 @@
+asttokens==2.0.5
+backcall==0.2.0
 beautifulsoup4==4.11.1
 bs4==0.0.1
-Flask==2.2.2
-Django==2.2.28
-dj-database-url==0.5.0
-dj-static==0.0.6
-gunicorn==19.9.0
-Unipath==1.1
-python-decouple==3.1
-Pillow==9.0.1
-Markdown==3.0.1
-bleach==3.3.0
-psycopg2==2.7.7
-whitenoise==4.1.2
-requests==2.28.0
-requests-oauthlib==1.0.0
+certifi==2020.4.5.1
+chardet==3.0.4
+charset-normalizer==2.0.12
+click==8.1.3
+commonmark==0.9.1
+decorator==5.1.1
+executing==0.8.3
+idna==2.9
+ipython==8.4.0
+itsdangerous==2.1.2
+jedi==0.18.1
+Jinja2==3.1.2
+MarkupSafe==2.1.1
+matplotlib-inline==0.1.3
+parso==0.8.3
+pexpect==4.8.0
+pickleshare==0.7.5
+prompt-toolkit==3.0.29
+ptyprocess==0.7.0
+pure-eval==0.2.2
+Pygments==2.12.0
+requests==2.23.0
+six==1.16.0
+soupsieve==2.3.2.post1
+stack-data==0.2.0
+traitlets==5.2.2.post1
+urllib3==1.25.8
+wcwidth==0.2.5
+Werkzeug==2.1.2
